# multimodal-semantic-ids

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  load.py  pixi.toml  pyproject.toml  recommend.py  todo.md
adapters/: vkc.h
adapters/bake/: introspect.py
adapters/train/: active_calib_sim.py  adamn_main.cpp  attn.slang  bench_gemm.py  bench_perf.py  calib_conv_check.py  calib_rank.py  check_adamn.py  check_attn.py  check_enc.py  check_encbwd_tiled.py  check_encgrad.py  check_lin.py  check_ln.py  check_nettrain.py  check_tic.py  check_ticgrad.py  device_apply.py  encgrad.slang  ew.slang  ew_main.cpp  export_selftest.py  fetch_addb.sh  gemm_main.cpp  gen_caldata.py  lin.slang  ml_calib_eval.py  modal_prior_sim.py  netfwd_main.cpp  nettrain_main.cpp  prims.slang  prims_main.cpp  probe.slang  probe_main.cpp  real_recover.py  sixd.py  synth_recover.py  train.slang  train_main.cpp  zero_halt_period.py
adapters/train/addb/: b3d_to_caldata.py  b3d_to_motion.py  dump_anim.py  extract_bonelens.py  generate_humans.py  probe_pheno.py  salvage_partial_zip.py  sample_caldata.py
adapters/train/torch/: bench_tk.py  bench_train.py  check_tic_tk.py  check_tk.py  domain_probe.py  probe_add.py  tk_ops.py  tk_tic.py  train_tic.py
core/: gen_rigrest.cpp  netfwd.cpp  netfwd.h  soma_pheno.h  soma_pheno_slang.cpp  soma_rig.h
core/spec/: EmitShaders.lean  lake-manifest.json
core/spec/Sinew/: Align.lean  Anthropometry.lean  RigRest.lean
core/spec/tests/lbs_cpu/: test.cpp
core/spec/tests/lbs_vulkan/: run.sh  vk_lbs.cpp
decisions/: 20260712-allocentric-i2i-over-egocentric-u2i.md  20260712-fsq-over-rqvae-for-semantic-ids.md  20260712-mesh-only-scope-postpone-qwen3vl-embedder.md  20260712-migrate-off-librecommender-to-foss-generative-retrieval.md  20260712-multimodal-foss-encoder-stack.md  20260712-openusd-mesh-corpus-elixir-voxel-slat-encoder.md  20260712-parquet-feature-store-etnf.md  20260712-phase2-foss-datasets.md  20260712-semantic-id-framework-base-rqvae-recommender.md  20260712-slang-lean4-mesh-vae-over-trellis2-cuda.md  20260713-multimodal-residual-fsq-semantic-ids.md  20260713-restore-zero-shot-sequential-recommendation-charter.md  20260714-inverse-rendering-residual-fsq-vae-for-mesh-ids.md  README.md  session_recommendation_03.md  session_recommendation_04.md  session_recommendation_06.md  session_recommendation_12.md
plans/: migration.domain.jsonld  migration.plan.json  migration.schedule.json
ports/: sibling-repos.txt  soma_pheno_api.h  tic_calib.h  vk_lbs_host.h
scripts/: assemble_lake.py  encode_image.py  encode_text.py  extract_keypoints.py  godot_decode_binaries.gd  mesh_encode_linux.py  mesh_semantic_ids.py  render_meshes.py  semantic_ids.py
tests/: test_etnf.py  test_metrics.py  test_sixd.py  test_uro.py
vsk_recsys/: __init__.py
vsk_recsys/data/: __init__.py  etnf.py  godot.py  lake.py  movielens.py  nadizik.py  uro.py
vsk_recsys/encoders/: __init__.py  mesh.py  multimodal.py  render.py  text.py
vsk_recsys/eval/: __init__.py  metrics.py
vsk_recsys/model/: __init__.py  decoder.py
vsk_recsys/quantizer/: __init__.py  fsq.py  tokenizer.py
vsk_recsys/train/: phase1_movielens.py
