[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vsk-recsys"
version = "0.1.0"
description = "FOSS semantic-ID generative retrieval for session-based Godot asset recommendation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "K. S. Ernest (iFire) Lee", email = "ernest.lee@chibifire.com" }]

[tool.setuptools.packages.find]
include = ["vsk_recsys*"]
